# stockai

./: COMPLETE.md  Cargo.toml  LOG.md  TASK.md  TODO.md  config.example.toml  holding_periods.txt  prototype.py  test.db
.cursor/: mcp.json
.cursor/rules/: backtest.mdc  rust.mdc  (+2 more)
data/: 2022.xls  2024.xls  backtest_dates_1.txt  best_model.onnx  extra_stocks.txt  features.txt  features_first.txt  market_close_day_2023.txt  market_close_day_2024.txt  market_close_day_2025.txt  rust_model_info.json  samsung_1day_dates.txt  samsung_1min_dates.txt  start1000.txt  stocks.txt
eval/: holding_periods.txt  kospi_daily_downloader.py  score.py  test.db  test_com.db  trade_plot.py  오픈API 활용자가이드_금융위원회_지수시세정보.docx
korea-investment-api/: Cargo.toml
korea-investment-api/src/: auth.rs  lib.rs
korea-investment-api/src/stock/: data.rs  order.rs  quote.rs
korea-investment-api/src/types/: config.rs  mod.rs  time.rs
korea-investment-api/src/types/request/stock/: balance.rs  mod.rs  order.rs  quote.rs
korea-investment-api/src/types/response/: auth.rs
korea-investment-api/src/types/response/stock/: balance.rs  mod.rs  order.rs  quote.rs  subscribe.rs
korea-investment-api/src/types/stream/stock/: exec.rs  my_exec.rs  ordb.rs
solomon/: Cargo.toml  README.md  best_model.joblib  best_model_metadata.json  sector_utf8.csv
solomon/models/: onnx_model_metadata.json  rust_model_info.json
solomon/python/: analyze_best_models.py  check_daily_db.py  complete_ml_pipeline.py  complete_mlp_pipeline.py  config_onnx_conversion.json  convert_to_onnx.py  model_load.py  predict_with_saved_model.py  requirements_onnx.txt  simple_rf_shap_analysis.py
solomon/python/total_analysis/: README.md  correlation_analysis_total.py  predict_and_evaluate_total.py  predict_top_per_day.py  requirements.txt  run_all_analysis.bat  run_complete_experiment.py  run_shap_analysis.bat  shap_analysis_total.py  train_models_total.py
solomon/src/: lib.rs  sector_manager.rs
stockrs/: Cargo.toml  test.db  trading.db
stockrs/data/: features.txt  rust_model_info.json
stockrs/src/: api.rs  apis.rs  broker.rs  config.rs  data_reader.rs  db_manager.rs  errors.rs  holiday_checker.rs  lib.rs  main.rs  model.rs  runner.rs  time.rs  types.rs  utility.rs
stockrs/src/api/: db_api.rs  koreainvestapi.rs
stockrs/src/apis/: backtest_api.rs  db_api.rs  korea_api.rs
stockrs/src/model/: dongwon.rs  joonwoo.rs  minseop.rs  onnx_predictor.rs
stockrs/src/model/onnx_predictor/: features.rs
stockrs/src/model/onnx_predictor/features/: TASK.md  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day1_new.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day26.rs  day27.rs  day28.rs  day2_new.rs  day3.rs  day3_new.rs  day4.rs  day4_new.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  utils.rs
stockrs/src/model/onnx_predictor/features/indicators/: ma.rs
stockrs/src/types/: api.rs  broker.rs  data_reader.rs  macros.rs  trading.rs
stockrs/src/utility/: apis.rs  config.rs  errors.rs  token_manager.rs  trading_calender.rs
stockrs/src/utility/apis/: backtest_api.rs  db_api.rs  korea_api.rs
stockrs/src/utility/deprecated/: holiday_checker.rs
stockrs/src/utility/types/: api.rs  broker.rs  data_reader.rs  macros.rs  trading.rs
stockrs/tests/: tradingdb.py
