[package]
name = "solomon"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
rusqlite = { version = "0.36.0", features = ["bundled", "backup"] }
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
# ONNX Runtime dependencies
ort = { version = "1.16.3", features = ["download-binaries"] }
ndarray = "0.15"
anyhow = "1.0"

[[bin]]
name = "analyze_high_break"
path = "src/bin/analyze_high_break.rs"

[[bin]]
name = "predict_top_stocks"
path = "src/bin/predict_top_stocks.rs"