[package]
name = "stockrs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
korea-investment-api = { path = "../korea-investment-api" }
thiserror = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-log = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ort = { version = "1.16.3", features = ["download-binaries"] }
ndarray = "0.15"
clap = { version = "4.0", features = ["derive"] }
once_cell = "1.19"